cluster-config/dev/opensearch/opensearch.yaml
---
---

# Source: opensearch/templates/elasticsearch/es-data-svc.yaml
# Copyright 2019 Viasat, Inc.
# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License is located at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# or in the "license" file accompanying this file. This file is distributed
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing
# permissions and limitations under the License.

# @formatter:off
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opensearch
    chart: "opensearch-1.13.1"
    release: "opensearch"
    heritage: "Helm"
    role: data
  name: opensearch-data-svc
  namespace: default
spec:
  ports:
  - port: 9300
    name: transport
  - port: 9200
    name: http
  - port: 9600
    name: metrics
  - port: 9650
    name: rca
  clusterIP: None
  selector:
    role: data
---

# Source: opensearch/templates/elasticsearch/es-service.yaml
# Copyright 2019 Viasat, Inc.
# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License is located at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# or in the "license" file accompanying this file. This file is distributed
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing
# permissions and limitations under the License.

# @formatter:off
kind: Service
apiVersion: v1
metadata:
  annotations:
    {}
  labels:
    app: opensearch
    chart: "opensearch-1.13.1"
    release: "opensearch"
    heritage: "Helm"
    role: data
  name: opensearch-http-service
  namespace: default
spec:
  ports:
    - name: http
      port: 9200
    - name: transport
      port: 9300
    - name: metrics
      port: 9600
    - name: rca
      port: 9650
  selector:
    role: data
  type: ClusterIP
---

# Source: opensearch/templates/elasticsearch/master-svc.yaml
# Copyright 2019 Viasat, Inc.
# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License is located at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# or in the "license" file accompanying this file. This file is distributed
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing
# permissions and limitations under the License.

# @formatter:off
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opensearch
    chart: "opensearch-1.13.1"
    release: "opensearch"
    heritage: "Helm"
    role: master
  name: opensearch-discovery
  namespace: default
spec:
  ports:
    - port: 9300
      protocol: TCP
  clusterIP: None
  selector:
    role: master
---

# Source: opensearch/templates/elasticsearch/es-data-sts.yaml
# Copyright 2019 Viasat, Inc.
# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License is located at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# or in the "license" file accompanying this file. This file is distributed
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing
# permissions and limitations under the License.

# @formatter:off

apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: opensearch
    chart: "opensearch-1.13.1"
    release: "opensearch"
    heritage: "Helm"
    role: data
  name: opensearch-data
  namespace: default
spec:
  serviceName: opensearch-data-svc
  replicas: 0
  selector:
    matchLabels:
      app: opensearch
      release: "opensearch"
      heritage: "Helm"
      role: data
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opensearch
        chart: "opensearch-1.13.1"
        release: "opensearch"
        heritage: "Helm"
        role: data
      annotations:
        
    spec:      
      imagePullSecrets:
        - name: acr-auth
      tolerations:
        - effect: NoSchedule
          key: agentpool
          operator: Equal
          value: esdata
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: agentpool
                operator: In
                values:
                - esdata
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  agentpool: esdata
              topologyKey: kubernetes.io/hostname
            weight: 1
      serviceAccountName: opensearch-es
      containers:
      - name: elasticsearch
        securityContext:
          capabilities:
            add: ["SYS_CHROOT"]
        command:
          - bash
          - -c
          - |
            set -ex
            # Create keystore
            bin/opensearch-keystore create
            # Add azure-repository account/key
            [ ! -z "$STORAGE_ACCOUNT_NAME" ] && echo $STORAGE_ACCOUNT_NAME | bin/opensearch-keystore add --stdin azure.client.default.account
            [ ! -z "$STORAGE_ACCOUNT_KEY" ] && echo $STORAGE_ACCOUNT_KEY | bin/opensearch-keystore add --stdin azure.client.default.key
            env "node.attr.zone=$(</tmpConfig/es-zone)" /usr/share/opensearch/opensearch-docker-entrypoint.sh opensearch
        image: episerver.azurecr.io/episerver/find-elasticsearch:2.1.0-develop-47607
        imagePullPolicy: "Always"
        # only publish the transport port
        ports:
        - containerPort: 9300
          name: transport
        resources:
            limits:
              memory: 52Gi
            requests:
              memory: 52Gi
        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 10
          tcpSocket:
            port: transport
        volumeMounts:
        - name: tmp
          mountPath: /tmpConfig
        - mountPath: /usr/share/opensearch/data
          name: data
          subPath: 
        - name: logs
          mountPath: /usr/share/opensearch/logs/log
        - name: cg-resources
          mountPath: /usr/share/opensearch/config/resources
        - mountPath: /usr/share/opensearch/config/logging.yml
          name: config
          subPath: logging.yml
      volumes:
      - name: tmp
        emptyDir: { }
      - name: logs
        azureFile:
          secretName: fileshare-secrets
          shareName: "optiq-logs-prod"
          readOnly: false
      - name: cg-resources
        azureFile:
          secretName: fileshare-secrets
          shareName: "optiq-opensearch-resources"
          readOnly: true
      - name: config
        secret:
          secretName: opensearch-es-config
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "1000Gi"
      storageClassName: "managed-premium"
---

# Source: opensearch/templates/elasticsearch/es-master-sts.yaml
# Copyright 2019 Viasat, Inc.
# Copyright 2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License").
# You may not use this file except in compliance with the License.
# A copy of the License is located at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# or in the "license" file accompanying this file. This file is distributed
# on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
# express or implied. See the License for the specific language governing
# permissions and limitations under the License.

# @formatter:off
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: opensearch
    chart: "opensearch-1.13.1"
    release: "opensearch"
    heritage: "Helm"
    role: master
  name: opensearch-master
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: opensearch
      release: "opensearch"
      heritage: "Helm"
      role: master
  updateStrategy:
    type: RollingUpdate
  serviceName: opensearch-discovery
  template:
    metadata:
      labels:
        app: opensearch
        chart: "opensearch-1.13.1"
        release: "opensearch"
        heritage: "Helm"
        role: master
      annotations:
        
    spec:      
      imagePullSecrets:
        - name: acr-auth
      serviceAccountName: opensearch-es
      tolerations:
        - effect: NoSchedule
          key: agentpool
          operator: Equal
          value: esmaster
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: agentpool
                operator: In
                values:
                - esmaster
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                agentpool: esmaster
            topologyKey: kubernetes.io/hostname
      containers:
      - name: elasticsearch
        securityContext:
          capabilities:
            add: ["SYS_CHROOT"]
        command:
          - bash
          - -cx
          - |
            set -ex

            # Create keystore
            bin/opensearch-keystore create
            # Add azure-repository account/key
            [ ! -z "$STORAGE_ACCOUNT_NAME" ] && echo $STORAGE_ACCOUNT_NAME | bin/opensearch-keystore add --stdin azure.client.default.account
            [ ! -z "$STORAGE_ACCOUNT_KEY" ] && echo $STORAGE_ACCOUNT_KEY | bin/opensearch-keystore add --stdin azure.client.default.key
            env "node.attr.zone=$(</tmpConfig/es-zone)" /usr/share/opensearch/opensearch-docker-entrypoint.sh opensearch
        resources:
            limits:
              memory: 26Gi
            requests:
              memory: 26Gi
        livenessProbe:
          initialDelaySeconds: 60
          periodSeconds: 10
          tcpSocket:
            port: transport
        image: episerver.azurecr.io/episerver/find-elasticsearch:2.1.0-develop-47607
        imagePullPolicy: "Always"
        ports:
        - containerPort: 9300
          name: transport
        - containerPort: 9200
          name: http
        - containerPort: 9600
          name: metrics
        - containerPort: 9650
          name: rca
        volumeMounts:
        - name: tmp
          mountPath: /tmpConfig
        - mountPath: /usr/share/opensearch/data
          name: data
          subPath: 
        - name: logs
          mountPath: /usr/share/opensearch/logs/log
        - name: cg-resources
          mountPath: /usr/share/opensearch/config/resources
        - mountPath: /usr/share/opensearch/config/logging.yml
          name: config
          subPath: logging.yml
      volumes:
      - name: tmp
        emptyDir: {}
      - name: logs
        azureFile:
          secretName: fileshare-secrets
          shareName: "optiq-logs-prod"
          readOnly: false
      - name: cg-resources
        azureFile:
          secretName: fileshare-secrets
          shareName: "optiq-opensearch-resources"
          readOnly: true
      - name: config
        secret:
          secretName: opensearch-es-config
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "10Gi"
      storageClassName: "managed-premium"
---

# Source: opensearch/templates/elasticsearch/es-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-elasticsearch
  namespace: default
spec:
  entryPoints:
    - internal-es
  routes:
    - match: 'PathPrefix(`/`)'
      kind: Rule
      middlewares:
        - name: inject-elastic-user-auth
      services:
        - name: opensearch-http-service
          port: 9200
---

# Source: opensearch/templates/elasticsearch/es-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: inject-elastic-user-auth
  namespace: default
spec:
  headers:
    customRequestHeaders:
      Authorization: "Basic ZWxhc3RpYzoxMjM0NTY3ODk="
